AC_INIT(mp.w)
AM_INIT_AUTOMAKE(libmplib,0.1.0)
AC_CONFIG_HEADERS(config.h)
AM_PROG_LIBTOOL

AC_LANG_C

AC_PROG_CC

AC_PROG_MAKE_SET

AC_HEADER_STDC

AC_HEADER_DIRENT

AC_CHECK_HEADERS(unistd.h,, AC_MSG_ERROR(required header file missing))

AC_CHECK_HEADERS(sys/stat.h sys/wait.h)

AC_CHECK_FUNCS(access atoi,,AC_MSG_ERROR(required standard library function missing))

AC_CHECK_FUNCS(snprintf gettimeofday ftime mkstemp mktemp)

AC_DEFUN(KPSE_STRUCT_ST_MTIM,
[AC_CACHE_CHECK([for st_mtim in struct stat], ac_cv_struct_st_mtim,
[AC_TRY_COMPILE([#include <sys/types.h>
#include <sys/stat.h>], [struct stat s; s.st_mtim;],
ac_cv_struct_st_mtim=yes, ac_cv_struct_st_mtim=no)])
if test $ac_cv_struct_st_mtim = yes; then
  AC_DEFINE([HAVE_ST_MTIM],[1],[Whatever])
fi
])

KPSE_STRUCT_ST_MTIM


AC_OUTPUT(Makefile)

