AC_INIT(mp.w)
AM_INIT_AUTOMAKE(libmplib,0.1.0)
AC_CONFIG_HEADERS(config.h)
AM_PROG_LIBTOOL

AC_LANG_C

AC_PROG_CC

AC_PROG_MAKE_SET

AC_HEADER_STDC

AC_CHECK_HEADERS(unistd.h,, AC_MSG_ERROR(required header file missing))

AC_CHECK_FUNCS(access atoi,,AC_MSG_ERROR(required standard library function missing))

AC_CHECK_FUNCS(snprintf)

AC_OUTPUT(Makefile)
